assets/css/faq_contact.css
@import url(./theme.css);

.fc-page-container{
  display: grid;
  justify-content: center;
  text-align: center;
}

.faq-page-container{
  display: grid;
  width: 75%;
  text-align: center;
  margin: auto;
}

.fc-title{
  color: var(--main-dark);
}

.collapsible {
    background-color: #777;
    color: white;
    cursor: pointer;
    padding: 18px;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
  }
  
  .active-faq, .collapsible:hover {
    background-color: #555;
  }
  
  .content {
    padding: 0 18px;
    display: none;
    overflow: hidden;
    background-color: #f1f1f1;
  }

